--- a/pipes/src/app/exemplos-pipes/exemplos-pipes.component.html
+++ b/pipes/src/app/exemplos-pipes/exemplos-pipes.component.html
@@ -1,6 +1,7 @@
 <h5>Exemplos de Pipes</h5>
 
 <p>Título: {{ livro.titulo | uppercase }}</p>
+<p>Título camel case: {{ livro.titulo | camelCase }}</p>
 <p>Estrelas: {{ livro.rating | number:'1.1-1' }}</p>
 <p>Páginas: {{ livro.numeroPaginas | number }}</p>
 <p>Preço: {{ livro.preco | currency:'BRL':true }}</p>
