--- a/pipes/src/app/exemplos-pipes/exemplos-pipes.component.html
+++ b/pipes/src/app/exemplos-pipes/exemplos-pipes.component.html
@@ -10,3 +10,16 @@
 <p>Url: {{ livro.url }}</p>
 <br>
 <p>Livro: {{ livro | json}}</p>
+
+<input type="text" [(ngModel)]='filtro'>
+
+<br><br>
+
+<input type="text" #novoValor>
+<button (click)="addLivro(novoValor.value)" >Add Curso</button>
+
+<ul>
+  <li *ngFor="let liv of livros | filtroArray:filtro">
+    {{ liv }}
+  </li>
+</ul>
