#48: Pipes: Async (assíncrono)

--- a/pipes/src/app/exemplos-pipes/exemplos-pipes.component.html
+++ b/pipes/src/app/exemplos-pipes/exemplos-pipes.component.html
@@ -43,3 +43,7 @@ Filtro: <input type="text" [(ngModel)]='filtro'>
     {{ liv }}
   </li>
 </ul>
+
+<p> {{ valorAsync | async }}</p>
+
+<p> {{ valorAsync2 | async }}</p>
