54: Rotas: Escutando mudanças nos parâmetros de roteamento

--- a/rotas/src/app/app.component.html
+++ b/rotas/src/app/app.component.html
@@ -11,8 +11,6 @@
 
 <div class="container">
   <p>Entre com o id do curso</p>
-  <input type="text" #idCurso value="">
-  <p>id digitado: {{ idCurso.value }}</p>
-  ______________________________________
+  <input type="text" #idCurso>
   <router-outlet></router-outlet>
 </div>
