--- a/rotas/src/app/alunos/aluno-detalhe/aluno-detalhe.component.html
+++ b/rotas/src/app/alunos/aluno-detalhe/aluno-detalhe.component.html
@@ -1,3 +1,9 @@
-<p>
-  aluno-detalhe works!
-</p>
+<h5>
+  Detalhe do Aluno
+</h5>
+
+<p>Id: {{ aluno.id }}</p>
+<p>Nome: {{ aluno.nome }}</p>
+<p>E-mail: {{ aluno.email }}</p>
+
+<a class="waves-effect waves-light btn" (click)="editarAluno()" >Editar</a>
