--- a/forms/src/app/template-form/template-form.component.html
+++ b/forms/src/app/template-form/template-form.component.html
@@ -4,14 +4,16 @@
     <label for="nome">Nome</label>
     <!-- <input type="text" class="form-control" id="nome" placeholder="Nome" name="nome" ngModel > -->
     <!-- <input type="text" class="form-control" id="nome" placeholder="Nome" name="nome" [(ngModel)]="usuario.nome" > -->
-    <input type="text" class="form-control" id="nome" placeholder="Nome" name="nome" [ngModel]="usuario.nome" >
+    <input type="text" class="form-control" id="nome" placeholder="Nome" 
+      name="nome" [ngModel]="usuario.nome" required >
   </div>
 
   <div class="form-group">
     <label for="email">E-mail</label>
     <!-- <input type="email" class="form-control" id="email" placeholder="nome@email.com" name="email" ngModel > -->
     <!-- <input type="email" class="form-control" id="email" placeholder="nome@email.com" name="email" [(ngModel)]="usuario.email" > -->
-    <input type="email" class="form-control" id="email" placeholder="nome@email.com" name="email" [ngModel]="usuario.email" >
+    <input type="email" class="form-control" id="email" placeholder="nome@email.com" 
+      name="email" [ngModel]="usuario.email" required email>
   </div>
 
   <button type="submit" class="btn btn-primary">Submit</button>
