--- a/forms/src/app/template-form/template-form.component.html
+++ b/forms/src/app/template-form/template-form.component.html
@@ -5,7 +5,10 @@
     <!-- <input type="text" class="form-control" id="nome" placeholder="Nome" name="nome" ngModel > -->
     <!-- <input type="text" class="form-control" id="nome" placeholder="Nome" name="nome" [(ngModel)]="usuario.nome" > -->
     <input type="text" class="form-control" id="nome" placeholder="Nome" 
-      name="nome" [ngModel]="usuario.nome" required >
+      name="nome" [ngModel]="usuario.nome" required #nome>
+      <div>
+        {{ nome.className }}
+      </div>
   </div>
 
   <div class="form-group">
