--- a/forms/src/app/template-form/template-form.component.html
+++ b/forms/src/app/template-form/template-form.component.html
@@ -1,31 +1,96 @@
-<form #f="ngForm" (ngSubmit)="onSubmit(f)" >
+<form #f="ngForm" (ngSubmit)="onSubmit(f)" class='' >
 
-  <div class="form-group">
-    <label for="nome">Nome</label>
-    <!-- <input type="text" class="form-control" id="nome" placeholder="Nome" name="nome" ngModel > -->
-    <!-- <input type="text" class="form-control" id="nome" placeholder="Nome" name="nome" [(ngModel)]="usuario.nome" > -->
-    <input type="text" class="form-control" id="nome" placeholder="Nome" 
-      name="nome" [ngModel]="usuario.nome" required #nome="ngModel" 
-      [class.is-invalid]="!nome.valid && nome.touched">
-      <!-- <div>
-        {{ nome.className }}
-      </div> -->
-      <div *ngIf="!nome.valid && nome.touched" class="invalid-feedback" >
-        Nome é obrigatório
-      </div>
+  <div class="form-row">
+    <div class="form-group col-sm-12">
+        <label for="nome">Nome</label>
+        <!-- <input type="text" class="form-control" id="nome" placeholder="Nome" name="nome" ngModel > -->
+        <!-- <input type="text" class="form-control" id="nome" placeholder="Nome" name="nome" [(ngModel)]="usuario.nome" > -->
+        <input type="text" class="form-control" id="nome" placeholder="Nome" 
+        name="nome" [ngModel]="usuario.nome" required #nome="ngModel" 
+        [class.is-invalid]="!nome.valid && nome.touched">
+        <!-- <div>
+          {{ nome.className }}
+        </div> -->
+        <div *ngIf="!nome.valid && nome.touched" class="invalid-feedback" >
+          Nome é obrigatório
+        </div>
+    </div>            
   </div>
 
-  <div class="form-group">
-    <label for="email">E-mail</label>
-    <!-- <input type="email" class="form-control" id="email" placeholder="nome@email.com" name="email" ngModel > -->
-    <!-- <input type="email" class="form-control" id="email" placeholder="nome@email.com" name="email" [(ngModel)]="usuario.email" > -->
-    <input type="email" class="form-control" id="email" placeholder="nome@email.com" 
-      name="email" [ngModel]="usuario.email" required email #email="ngModel" 
-      [class.is-invalid]="!email.valid && email.touched">
+  <div class="form-row">    
+    <div class="form-group col-sm-12">
+        <label for="email">E-mail</label>
+        <!-- <input type="email" class="form-control" id="email" placeholder="nome@email.com" name="email" ngModel > -->
+        <!-- <input type="email" class="form-control" id="email" placeholder="nome@email.com" name="email" [(ngModel)]="usuario.email" > -->
+        <input type="email" class="form-control" id="email" placeholder="nome@email.com" 
+          name="email" [ngModel]="usuario.email" required email #email="ngModel" 
+          [class.is-invalid]="!email.valid && email.touched">
 
-      <div *ngIf="!email.valid && email.touched" class="invalid-feedback" >
-        E-mail inválido
+          <div *ngIf="!email.valid && email.touched" class="invalid-feedback" >
+            E-mail inválido
+          </div>
       </div>
+  </div>
+  
+  <div class="form-row">
+    <div class="form-group col-md-3">
+        <label for="cep" class="control-label">CEP</label>
+        <input type="text" class="form-control" id="cep" name="cep" ngModel required #cep="ngModel"
+          [class.is-invalid]="!cep.valid && cep.touched">
+        <div *ngIf="!cep.valid && cep.touched" class="invalid-feedback" >
+            CEP inválido
+        </div>
+    </div>
+    <div class="form-group col-md-3">
+        <label for="numero" class="control-label">Número</label>
+        <input type="text" class="form-control" id="numero" name="numero" ngModel required #numero="ngModel"
+          [class.is-invalid]="!numero.valid && numero.touched">
+        <div *ngIf="!numero.valid && numero.touched" class="invalid-feedback" >
+            Número inválido
+        </div>
+    </div>
+    <div class="form-group col-md-6">
+        <label for="complemento" class="control-label">Complemento</label>
+        <input type="text" class="form-control" id="complemento" name="complemento" ngModel #complemento="ngModel">
+    </div>
+  </div>
+  
+  <div class="form-row">
+    <div class="form-group col-md-12">
+        <label for="rua" class="control-label">Rua</label>
+        <input type="text" class="form-control" id="rua" name="rua" ngModel required #rua="ngModel"
+          [class.is-invalid]="!rua.valid && rua.touched">
+        <div *ngIf="!rua.valid && rua.touched" class="invalid-feedback" >
+            Rua inválido
+        </div>
+    </div>
+  </div>
+  
+  <div class="form-row">
+    <div class="form-group col-md-5">
+        <label for="bairro" class="control-label">Bairro</label>
+        <input type="text" class="form-control" id="bairro" name="bairro" ngModel required #bairro="ngModel"
+          [class.is-invalid]="!bairro.valid && bairro.touched">
+        <div *ngIf="!bairro.valid && bairro.touched" class="invalid-feedback" >
+            Bairro inválido
+        </div>
+    </div>
+    <div class="form-group col-md-4">
+        <label for="cidade" class="control-label">Cidade</label>
+        <input type="text" class="form-control" id="cidade" name="cidade" ngModel required #cidade="ngModel"
+          [class.is-invalid]="!cidade.valid && cidade.touched">
+        <div *ngIf="!cidade.valid && cidade.touched" class="invalid-feedback" >
+            Cidade inválido
+        </div>
+    </div>
+    <div class="form-group col-md-3">
+        <label for="estado" class="control-label">Estado</label>
+        <input type="text" class="form-control" id="estado" name="estado" ngModel required #estado="ngModel"
+          [class.is-invalid]="!estado.valid && estado.touched">
+        <div *ngIf="!estado.valid && estado.touched" class="invalid-feedback" >
+            Estado inválido
+        </div>
+    </div>
   </div>
 
   <button type="submit" class="btn btn-primary" [disabled]="!f.valid">Submit</button>
