--- a/forms/src/app/template-form/template-form.component.html
+++ b/forms/src/app/template-form/template-form.component.html
@@ -6,14 +6,11 @@
         <!-- <input type="text" class="form-control" id="nome" placeholder="Nome" name="nome" ngModel > -->
         <!-- <input type="text" class="form-control" id="nome" placeholder="Nome" name="nome" [(ngModel)]="usuario.nome" > -->
         <input type="text" class="form-control" id="nome" placeholder="Nome" 
-        name="nome" [ngModel]="usuario.nome" required #nome="ngModel" 
-        [class.is-invalid]="!nome.valid && nome.touched">
+          name="nome" [ngModel]="usuario.nome" required #nome="ngModel" [ngClass]="aplicaCssErro(nome)">
         <!-- <div>
           {{ nome.className }}
         </div> -->
-        <div *ngIf="!nome.valid && nome.touched" class="invalid-feedback" >
-          Nome é obrigatório
-        </div>
+        <app-campo-control-erro [mostrarErro]="verificaValidTouched(nome)" msgErro="Nome é obrigatório" ></app-campo-control-erro>
     </div>            
   </div>
 
@@ -23,78 +20,59 @@
         <!-- <input type="email" class="form-control" id="email" placeholder="nome@email.com" name="email" ngModel > -->
         <!-- <input type="email" class="form-control" id="email" placeholder="nome@email.com" name="email" [(ngModel)]="usuario.email" > -->
         <input type="email" class="form-control" id="email" placeholder="nome@email.com" 
-          name="email" [ngModel]="usuario.email" required email #email="ngModel" 
-          [class.is-invalid]="!email.valid && email.touched">
-
-          <div *ngIf="!email.valid && email.touched" class="invalid-feedback" >
-            E-mail inválido
-          </div>
+          name="email" [ngModel]="usuario.email" required email #email="ngModel" [ngClass]="aplicaCssErro(email)">
+          <app-campo-control-erro [mostrarErro]="verificaValidTouched(email)" msgErro="E-mail é obrigatório" ></app-campo-control-erro>
       </div>
   </div>
   
-  <div class="form-row">
-    <div class="form-group col-md-3">
-        <label for="cep" class="control-label">CEP</label>
-        <input type="text" class="form-control" id="cep" name="cep" ngModel required #cep="ngModel"
-          [class.is-invalid]="!cep.valid && cep.touched">
-        <div *ngIf="!cep.valid && cep.touched" class="invalid-feedback" >
-            CEP inválido
+    <div ngModelGroup="endereco" >
+        <div class="form-row">
+            <div class="form-group col-md-3">
+                <label for="cep" class="control-label">CEP</label>
+                <input type="text" class="form-control" id="cep" name="cep" ngModel required #cep="ngModel" [ngClass]="aplicaCssErro(cep)">
+                <app-campo-control-erro [mostrarErro]="verificaValidTouched(cep)" msgErro="CEP é obrigatório" ></app-campo-control-erro>
+            </div>
+            <div class="form-group col-md-3">
+                <label for="numero" class="control-label">Número</label>
+                <input type="text" class="form-control" id="numero" name="numero" ngModel required #numero="ngModel" [ngClass]="aplicaCssErro(numero)">
+                <app-campo-control-erro [mostrarErro]="verificaValidTouched(numero)" msgErro="Número é obrigatório" ></app-campo-control-erro>
+            </div>
+            <div class="form-group col-md-6">
+                <label for="complemento" class="control-label">Complemento</label>
+                <input type="text" class="form-control" id="complemento" name="complemento" ngModel #complemento="ngModel">
+            </div>
         </div>
-    </div>
-    <div class="form-group col-md-3">
-        <label for="numero" class="control-label">Número</label>
-        <input type="text" class="form-control" id="numero" name="numero" ngModel required #numero="ngModel"
-          [class.is-invalid]="!numero.valid && numero.touched">
-        <div *ngIf="!numero.valid && numero.touched" class="invalid-feedback" >
-            Número inválido
+        
+        <div class="form-row">
+            <div class="form-group col-md-12">
+                <label for="rua" class="control-label">Rua</label>
+                <input type="text" class="form-control" id="rua" name="rua" ngModel required #rua="ngModel" [ngClass]="aplicaCssErro(rua)">
+                <app-campo-control-erro [mostrarErro]="verificaValidTouched(rua)" msgErro="Rua é obrigatório" ></app-campo-control-erro>
+            </div>
         </div>
-    </div>
-    <div class="form-group col-md-6">
-        <label for="complemento" class="control-label">Complemento</label>
-        <input type="text" class="form-control" id="complemento" name="complemento" ngModel #complemento="ngModel">
-    </div>
-  </div>
-  
-  <div class="form-row">
-    <div class="form-group col-md-12">
-        <label for="rua" class="control-label">Rua</label>
-        <input type="text" class="form-control" id="rua" name="rua" ngModel required #rua="ngModel"
-          [class.is-invalid]="!rua.valid && rua.touched">
-        <div *ngIf="!rua.valid && rua.touched" class="invalid-feedback" >
-            Rua inválido
+        
+        <div class="form-row">
+            <div class="form-group col-md-5">
+                <label for="bairro" class="control-label">Bairro</label>
+                <input type="text" class="form-control" id="bairro" name="bairro" ngModel required #bairro="ngModel" [ngClass]="aplicaCssErro(bairro)">
+                <app-campo-control-erro [mostrarErro]="verificaValidTouched(bairro)" msgErro="Bairro é obrigatório" ></app-campo-control-erro>
+            </div>
+            <div class="form-group col-md-4">
+                <label for="cidade" class="control-label">Cidade</label>
+                <input type="text" class="form-control" id="cidade" name="cidade" ngModel required #cidade="ngModel" [ngClass]="aplicaCssErro(cidade)">
+                <app-campo-control-erro [mostrarErro]="verificaValidTouched(cidade)" msgErro="Cidade é obrigatória" ></app-campo-control-erro>
+            </div>
+            <div class="form-group col-md-3">
+                <label for="estado" class="control-label">Estado</label>
+                <input type="text" class="form-control" id="estado" name="estado" ngModel required #estado="ngModel" [ngClass]="aplicaCssErro(estado)">
+                <app-campo-control-erro [mostrarErro]="verificaValidTouched(estado)" msgErro="Estado é obrigatório" ></app-campo-control-erro>
+            </div>
         </div>
-    </div>
-  </div>
-  
-  <div class="form-row">
-    <div class="form-group col-md-5">
-        <label for="bairro" class="control-label">Bairro</label>
-        <input type="text" class="form-control" id="bairro" name="bairro" ngModel required #bairro="ngModel"
-          [class.is-invalid]="!bairro.valid && bairro.touched">
-        <div *ngIf="!bairro.valid && bairro.touched" class="invalid-feedback" >
-            Bairro inválido
-        </div>
-    </div>
-    <div class="form-group col-md-4">
-        <label for="cidade" class="control-label">Cidade</label>
-        <input type="text" class="form-control" id="cidade" name="cidade" ngModel required #cidade="ngModel"
-          [class.is-invalid]="!cidade.valid && cidade.touched">
-        <div *ngIf="!cidade.valid && cidade.touched" class="invalid-feedback" >
-            Cidade inválido
-        </div>
-    </div>
-    <div class="form-group col-md-3">
-        <label for="estado" class="control-label">Estado</label>
-        <input type="text" class="form-control" id="estado" name="estado" ngModel required #estado="ngModel"
-          [class.is-invalid]="!estado.valid && estado.touched">
-        <div *ngIf="!estado.valid && estado.touched" class="invalid-feedback" >
-            Estado inválido
-        </div>
-    </div>
-  </div>
 
-  <button type="submit" class="btn btn-primary" [disabled]="!f.valid">Submit</button>
+            
+    </div>
+    <button type="submit" class="btn btn-primary" [disabled]="!f.valid">Submit</button>
 
-  <app-form-debug [form]="f" ></app-form-debug>
+    <app-form-debug [form]="f" ></app-form-debug>
 
 </form>
