--- a/forms/src/app/template-form/template-form.component.html
+++ b/forms/src/app/template-form/template-form.component.html
@@ -29,7 +29,9 @@
         <div class="form-row">
             <div class="form-group col-md-3">
                 <label for="cep" class="control-label">CEP</label>
-                <input type="text" class="form-control" id="cep" name="cep" ngModel required #cep="ngModel" [ngClass]="aplicaCssErro(cep)">
+                <input type="text" class="form-control" id="cep" name="cep" 
+                ngModel required #cep="ngModel" [ngClass]="aplicaCssErro(cep)"
+                (blur)="consultaCEP($event.target.value)">
                 <app-campo-control-erro [mostrarErro]="verificaValidTouched(cep)" msgErro="CEP é obrigatório" ></app-campo-control-erro>
             </div>
             <div class="form-group col-md-3">
