--- a/forms/src/app/data-form/data-form.component.html
+++ b/forms/src/app/data-form/data-form.component.html
@@ -1,3 +1,23 @@
-<p>
-  data-form works!
-</p>
+<form class='' [formGroup]="formulario" >
+
+  <div class="form-row">
+    <div class="form-group col-sm-12">
+        <label for="nome">Nome</label>
+        <input type="text" class="form-control" id="nome" placeholder="Nome" 
+        formControlName="nome" required >
+    </div>            
+  </div>
+
+  <div class="form-row">    
+    <div class="form-group col-sm-12">
+        <label for="email">E-mail</label>
+        <input type="email" class="form-control" id="email" placeholder="nome@email.com" 
+          formControlName="email" required email>
+      </div>
+  </div>
+  
+    <button type="submit" class="btn btn-primary">Submit</button>
+
+    <app-form-debug [form]="formulario" ></app-form-debug>
+
+</form>
