--- a/forms/src/app/data-form/data-form.component.html
+++ b/forms/src/app/data-form/data-form.component.html
@@ -1,4 +1,4 @@
-<form class='' [formGroup]="formulario" >
+<form class='' [formGroup]="formulario" (ngSubmit)="onSubmit()" >
 
   <div class="form-row">
     <div class="form-group col-sm-12">
