--- a/forms/src/app/data-form/data-form.component.html
+++ b/forms/src/app/data-form/data-form.component.html
@@ -17,6 +17,8 @@
   </div>
   
     <button type="submit" class="btn btn-primary">Submit</button>
+    &nbsp;
+    <button type="button" class="btn btn-default" (click)="resetar()">Cancelar</button>
 
     <app-form-debug [form]="formulario" ></app-form-debug>
 
