--- a/forms/src/app/data-form/data-form.component.html
+++ b/forms/src/app/data-form/data-form.component.html
@@ -4,7 +4,7 @@
     <div class="form-group col-sm-12">
         <label for="nome">Nome</label>
         <input type="text" class="form-control" id="nome" placeholder="Nome" 
-        formControlName="nome" required [ngClass]="aplicaCssErro('nome')" >
+        formControlName="nome" [ngClass]="aplicaCssErro('nome')" >
         <app-campo-control-erro [mostrarErro]="verificaValidTouched('nome')" msgErro="Nome é obrigatório" ></app-campo-control-erro>
     </div>            
   </div>
@@ -13,16 +13,68 @@
     <div class="form-group col-sm-12">
         <label for="email">E-mail</label>
         <input type="email" class="form-control" id="email" placeholder="nome@email.com" 
-          formControlName="email" required email [ngClass]="aplicaCssErro('email')">
+          formControlName="email" [ngClass]="aplicaCssErro('email')">
           <app-campo-control-erro [mostrarErro]="verificaValidTouched('email')" msgErro="E-mail é obrigatório" ></app-campo-control-erro>
           <app-campo-control-erro [mostrarErro]="verificaEmailInvalido()" msgErro="E-mail inválido" ></app-campo-control-erro>
       </div>
   </div>
-  
-    <button type="submit" class="btn btn-primary">Submit</button>
-    &nbsp;
-    <button type="button" class="btn btn-default" (click)="resetar()">Cancelar</button>
 
-    <app-form-debug [form]="formulario" ></app-form-debug>
+  <div>
+      <div class="form-row">
+          <div class="form-group col-md-3">
+              <label for="cep" class="control-label">CEP</label>
+              <input type="text" class="form-control" id="cep" placeholder="cep"
+              formControlName="cep" [ngClass]="aplicaCssErro('cep')">
+              <app-campo-control-erro [mostrarErro]="verificaValidTouched('cep')" msgErro="CEP é obrigatório" ></app-campo-control-erro>
+          </div>
+          <div class="form-group col-md-3">
+              <label for="numero" class="control-label">Número</label>
+              <input type="text" class="form-control" id="numero" placeholder="numero"
+              formControlName="numero" [ngClass]="aplicaCssErro('numero')">
+              <app-campo-control-erro [mostrarErro]="verificaValidTouched('numero')" msgErro="Número é obrigatório" ></app-campo-control-erro>
+          </div>
+          <div class="form-group col-md-6">
+              <label for="complemento" class="control-label">Complemento</label>
+              <input type="text" class="form-control" id="complemento" placeholder="complemento"
+              formControlName="complemento">
+          </div>
+      </div>
+      
+      <div class="form-row">
+          <div class="form-group col-md-12">
+              <label for="rua" class="control-label">Rua</label>
+              <input type="text" class="form-control" id="rua" placeholder="rua"
+              formControlName="rua" [ngClass]="aplicaCssErro('rua')">
+              <app-campo-control-erro [mostrarErro]="verificaValidTouched('rua')" msgErro="Rua é obrigatório" ></app-campo-control-erro>
+          </div>
+      </div>
+      
+      <div class="form-row">
+          <div class="form-group col-md-5">
+              <label for="bairro" class="control-label">Bairro</label>
+              <input type="text" class="form-control" id="bairro" placeholder="bairro"
+              formControlName="bairro" [ngClass]="aplicaCssErro('bairro')">
+              <app-campo-control-erro [mostrarErro]="verificaValidTouched('bairro')" msgErro="Bairro é obrigatório" ></app-campo-control-erro>
+          </div>
+          <div class="form-group col-md-4">
+              <label for="cidade" class="control-label">Cidade</label>
+              <input type="text" class="form-control" id="cidade" placeholder="cidade"
+              formControlName="cidade" [ngClass]="aplicaCssErro('cidade')">
+              <app-campo-control-erro [mostrarErro]="verificaValidTouched('cidade')" msgErro="Cidade é obrigatória" ></app-campo-control-erro>
+          </div>
+          <div class="form-group col-md-3">
+              <label for="estado" class="control-label">Estado</label>
+              <input type="text" class="form-control" id="estado" placeholder="estado"
+              formControlName="estado" [ngClass]="aplicaCssErro('estado')">
+              <app-campo-control-erro [mostrarErro]="verificaValidTouched('estado')" msgErro="Estado é obrigatório" ></app-campo-control-erro>
+          </div>
+      </div>        
+  </div>
+  
+  <button type="submit" class="btn btn-primary">Submit</button>
+  &nbsp;
+  <button type="button" class="btn btn-default" (click)="resetar()">Cancelar</button>
+
+  <app-form-debug [form]="formulario" ></app-form-debug>
 
 </form>
