--- a/forms/src/app/data-form/data-form.component.html
+++ b/forms/src/app/data-form/data-form.component.html
@@ -24,7 +24,8 @@
           <div class="form-group col-md-3">
               <label for="cep" class="control-label">CEP</label>
               <input type="text" class="form-control" id="cep" placeholder="cep"
-              formControlName="cep" [ngClass]="aplicaCssErro('endereco.cep')">
+              formControlName="cep" [ngClass]="aplicaCssErro('endereco.cep')"
+              (blur)="consultaCEP()">
               <app-campo-control-erro [mostrarErro]="verificaValidTouched('endereco.cep')" msgErro="CEP é obrigatório" ></app-campo-control-erro>
           </div>
           <div class="form-group col-md-3">
