--- a/forms/src/app/data-form/data-form.component.html
+++ b/forms/src/app/data-form/data-form.component.html
@@ -3,16 +3,16 @@
   <div class="form-row">
     <div class="form-group col-sm-12">
         <label for="nome">Nome</label>
-        <input type="text" class="form-control" id="nome" placeholder="Nome" 
+        <input type="text" class="form-control" id="nome" placeholder="Nome"
         formControlName="nome" [ngClass]="aplicaCssErro('nome')" >
         <app-campo-control-erro [mostrarErro]="verificaValidTouched('nome')" msgErro="Nome é obrigatório" ></app-campo-control-erro>
-    </div>            
+    </div>
   </div>
-  
-  <div class="form-row">    
+
+  <div class="form-row">
     <div class="form-group col-sm-12">
         <label for="email">E-mail</label>
-        <input type="email" class="form-control" id="email" placeholder="nome@email.com" 
+        <input type="email" class="form-control" id="email" placeholder="nome@email.com"
           formControlName="email" [ngClass]="aplicaCssErro('email')">
           <app-campo-control-erro [mostrarErro]="verificaValidTouched('email')" msgErro="E-mail é obrigatório" ></app-campo-control-erro>
           <app-campo-control-erro [mostrarErro]="verificaEmailInvalido()" msgErro="E-mail inválido" ></app-campo-control-erro>
@@ -40,7 +40,7 @@
               formControlName="complemento">
           </div>
       </div>
-      
+
       <div class="form-row">
           <div class="form-group col-md-12">
               <label for="rua" class="control-label">Rua</label>
@@ -49,7 +49,7 @@
               <app-campo-control-erro [mostrarErro]="verificaValidTouched('endereco.rua')" msgErro="Rua é obrigatório" ></app-campo-control-erro>
           </div>
       </div>
-      
+
       <div class="form-row">
           <div class="form-group col-md-5">
               <label for="bairro" class="control-label">Bairro</label>
@@ -65,13 +65,15 @@
           </div>
           <div class="form-group col-md-3">
               <label for="estado" class="control-label">Estado</label>
-              <input type="text" class="form-control" id="estado" placeholder="estado"
-              formControlName="estado" [ngClass]="aplicaCssErro('endereco.estado')">
+              <select type="text" class="form-control" id="estado" placeholder="estado"
+                formControlName="estado" [ngClass]="aplicaCssErro('endereco.estado')">
+                <option *ngFor="let estado of estados | async" [value]="estado.sigla" >{{estado.nome}}</option>
+              </select>
               <app-campo-control-erro [mostrarErro]="verificaValidTouched('endereco.estado')" msgErro="Estado é obrigatório" ></app-campo-control-erro>
           </div>
-      </div>        
+      </div>
   </div>
-  
+
   <button type="submit" class="btn btn-primary">Submit</button>
   &nbsp;
   <button type="button" class="btn btn-default" (click)="resetar()">Cancelar</button>
