--- a/forms/src/app/data-form/data-form.component.html
+++ b/forms/src/app/data-form/data-form.component.html
@@ -65,7 +65,7 @@
           </div>
           <div class="form-group col-md-3">
               <label for="estado" class="control-label">Estado</label>
-              <select type="text" class="form-control" id="estado" placeholder="estado"
+              <select class="form-control" id="estado" placeholder="estado"
                 formControlName="estado" [ngClass]="aplicaCssErro('endereco.estado')">
                 <option *ngFor="let estado of estados | async" [value]="estado.sigla" >{{estado.nome}}</option>
               </select>
@@ -74,9 +74,21 @@
       </div>
   </div>
 
+  <div class="form-row">
+      <div class="form-group col-md-3">
+          <label for="cargo" class="control-label">Cargo</label>
+          <select class="form-control" id="cargo" placeholder="cargo"
+            formControlName="cargo" [compareWith]="compararCargos">
+            <option *ngFor="let cargo of cargos" [ngValue]="cargo" >{{cargo.desc}}</option>
+          </select>
+      </div>
+  </div>
+
   <button type="submit" class="btn btn-primary">Submit</button>
   &nbsp;
   <button type="button" class="btn btn-default" (click)="resetar()">Cancelar</button>
+  &nbsp;
+  <button type="button" class="btn btn-default" (click)="setarCargo()">Cargo</button>
 
   <app-form-debug [form]="formulario" ></app-form-debug>
 
