--- a/forms/src/app/data-form/data-form.component.html
+++ b/forms/src/app/data-form/data-form.component.html
@@ -82,13 +82,22 @@
             <option *ngFor="let cargo of cargos" [ngValue]="cargo" >{{cargo.desc}}</option>
           </select>
       </div>
+      <div class="form-group col-md-3">
+        <label for="tecnologias" class="control-label">Tecnologias</label>
+        <select class="form-control" id="tecnologias" placeholder="tecnologias"
+          formControlName="tecnologias" multiple>
+          <option *ngFor="let tecnologia of tecnologias" [value]="tecnologia.nome" >{{tecnologia.desc}}</option>
+        </select>
+    </div>
   </div>
 
   <button type="submit" class="btn btn-primary">Submit</button>
   &nbsp;
   <button type="button" class="btn btn-default" (click)="resetar()">Cancelar</button>
   &nbsp;
-  <button type="button" class="btn btn-default" (click)="setarCargo()">Cargo</button>
+  <button type="button" class="btn btn-info" (click)="setarCargo()">Cargo</button>
+  &nbsp;
+  <button type="button" class="btn btn-info" (click)="setarTecnologias()">Tecnologias</button>
 
   <app-form-debug [form]="formulario" ></app-form-debug>
 
