--- a/forms/src/app/data-form/data-form.component.html
+++ b/forms/src/app/data-form/data-form.component.html
@@ -75,20 +75,30 @@
   </div>
 
   <div class="form-row">
-      <div class="form-group col-md-3">
+      <div class="form-group col-md-4">
           <label for="cargo" class="control-label">Cargo</label>
           <select class="form-control" id="cargo" placeholder="cargo"
             formControlName="cargo" [compareWith]="compararCargos">
             <option *ngFor="let cargo of cargos" [ngValue]="cargo" >{{cargo.desc}}</option>
           </select>
       </div>
-      <div class="form-group col-md-3">
+      <div class="form-group col-md-4">
         <label for="tecnologias" class="control-label">Tecnologias</label>
         <select class="form-control" id="tecnologias" placeholder="tecnologias"
           formControlName="tecnologias" multiple>
           <option *ngFor="let tecnologia of tecnologias" [value]="tecnologia.nome" >{{tecnologia.desc}}</option>
         </select>
-    </div>
+      </div>
+      <div class="form-group col-md-4">
+        <label class="control-label">Newsletter</label>
+        <div class="">
+          <div class="col-sm-6 col-md-6" *ngFor="let item of newsletterOp"  >
+            <label class="form-check-label">
+              <input class="form-check-input" [value]="item.valor" type="radio" formControlName="newsletter" /> {{ item.desc }}
+            </label>
+          </div>
+        </div>
+      </div>
   </div>
 
   <button type="submit" class="btn btn-primary">Submit</button>
