--- a/forms/src/app/data-form/data-form.component.html
+++ b/forms/src/app/data-form/data-form.component.html
@@ -26,7 +26,8 @@
               <input type="text" class="form-control" id="cep" placeholder="cep"
               formControlName="cep" [ngClass]="aplicaCssErro('endereco.cep')"
               (blur)="consultaCEP()">
-              <app-campo-control-erro [mostrarErro]="verificaValidTouched('endereco.cep')" msgErro="CEP é obrigatório" ></app-campo-control-erro>
+              <app-campo-control-erro [mostrarErro]="verificaRequired('endereco.cep')" msgErro="CEP é obrigatório" ></app-campo-control-erro>
+              <app-campo-control-erro [mostrarErro]="formulario.get('endereco.cep').hasError('cepInvalido')" msgErro="CEP inválido" ></app-campo-control-erro>
           </div>
           <div class="form-group col-md-3">
               <label for="numero" class="control-label">Número</label>
