--- a/forms/src/app/data-form/data-form.component.html
+++ b/forms/src/app/data-form/data-form.component.html
@@ -5,7 +5,7 @@
         <label for="nome">Nome</label>
         <input type="text" class="form-control" id="nome" placeholder="Nome"
         formControlName="nome" [ngClass]="aplicaCssErro('nome')" >
-        <app-campo-control-erro [mostrarErro]="verificaValidTouched('nome')" msgErro="Nome é obrigatório" ></app-campo-control-erro>
+        <app-error-msg [control]="formulario.get('nome')" label="Nome" ></app-error-msg>
     </div>
   </div>
 
