113: Formulários reativos: Reagindo à mudanças reativamente

--- a/forms/src/app/data-form/data-form.component.html
+++ b/forms/src/app/data-form/data-form.component.html
@@ -36,8 +36,7 @@
           <div class="form-group col-md-3">
               <label for="cep" class="control-label">CEP</label>
               <input type="text" class="form-control" id="cep" placeholder="cep"
-              formControlName="cep" [ngClass]="aplicaCssErro('endereco.cep')"
-              (blur)="consultaCEP()">
+              formControlName="cep" [ngClass]="aplicaCssErro('endereco.cep')">
               <app-campo-control-erro [mostrarErro]="verificaRequired('endereco.cep')" msgErro="CEP é obrigatório" ></app-campo-control-erro>
               <app-campo-control-erro [mostrarErro]="formulario.get('endereco.cep').hasError('cepInvalido')" msgErro="CEP inválido" ></app-campo-control-erro>
           </div>
