--- a/requests-http/src/app/app.component.html
+++ b/requests-http/src/app/app.component.html
@@ -11,6 +11,9 @@
       <li class="nav-item">
         <a class="nav-link" routerLink="/cursos" routerLinkAtive="active">Cursos</a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link" routerLinkActive="active" [routerLink]="['/rxjs-poc']">RxJS POC</a>
+      </li>
     </ul>
   </div>
 </nav>
